VERSION 0.9.9
-------------
Release Date: ?

 - added 3 methods to Peak_Zendatable : get(), getAll() and _get(). Those new methods simplifies table models 
   by writing less code for select statements
 - changed if condition is_null to isset in Peak/Model/ActiveRecord.php construtor for $data
 - modified method exists() in Peak_Zendatable to return an array instead whole object when $return_row is true
 - added method loadUrl() for Peak_Config_Json. Support get/post url. Require php extension CURL.
 - added the support of passing an object as well for the model param in Peak_Model_ActiveRecord
 - removed new array syntax in Peak_Model_ActiveRecord to keep backward compatibility with php < 5.3
 - rewrited method __construct() of Peak_Model_ActiveRecord for more flexibility and added final method readOnly()
 - fixed a bug in Peak_Model_ActiveRecord $_readonly was not evaluated in save() and delete()
 - fixed a bug of cleanArray() in Peak_Model_Zendatable that let pass valid column data even if is 
   value is an array(notice array to string converstion). Now if its a valid column and data is an array,
   it will be transformed into json string automatically.
 - added array empty check in new methods _configView() and _configRouter() in Peak_Application_Bootstrap
 - fixed regression introduced in 0.9.8 >
   "fixed group by unquoted identifier of method _getData() in Peak_Model_Pagination"


VERSION 0.9.8
-------------
Release Date: 2014-02-04

 - added a new exception ERR_VIEW_ENGINE_NOT_FOUND to handle error of loading unknown view rendering engine
 - !IMPORTANT: changed the prefix of methods automatically called by Peak_Application_Bootstrap.
   Old prefix : _init  New prefix: init
 - renamed method boot to _boot() in Peak_Application_Bootstrap
 - Peak_Application_Bootstrap now handle app configs injection in Peak_View and Peak_Router.
   Added methods _configView() and _configRouter() for that purpose.